[project]
name = "seerAD"
version = "0.1.1"
description = "SeerAD - Semi-automated AD CTF Assistant"
authors = [{name = "sado"}]
license = {text = "MIT"}
dependencies = [
    "typer>=0.4.3",
    "rich>=13.0.0",
    "appdirs>=1.4.4",
    "prompt-toolkit>=3.0.0",
    "minikerberos>=0.4.0",
    "impacket>=0.10.0",
    "pycryptodome>=3.19.0",
    "urllib3>=1.21.1,<1.25",
    "python-dateutil>=2.8.2"
]
requires-python = ">=3.8"

[project.scripts]
seerAD = "seerAD.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
